# trim-server/docs/swagger.json
@@ -16,35 +16,6 @@
     },
     "basePath": "/",
     "paths": {
-        "/:link_uuid": {
-            "get": {
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Index"
-                ],
-                "summary": "redirect to the original link from the uuid",
-                "operationId": "redirect-to-original-link",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "short uuid",
-                        "name": "link_uuid",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "300": {
-                        "description": ""
-                    },
-                    "404": {
-                        "description": ""
-                    }
-                }
-            }
-        },
         "/auth/login": {
             "post": {
                 "produces": [
@@ -119,8 +90,13 @@
                 }
             }
         },
-        "/link": {
+        "/trimmed-link/create": {
             "post": {
+                "security": [
+                    {
+                        "Authorization": []
+                    }
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -172,6 +148,35 @@
                         "description": ""
                     },
                     "401": {
+                        "description": ""
+                    }
+                }
+            }
+        },
+        "/{link_uuid}": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Index"
+                ],
+                "summary": "redirect to the original link from the uuid",
+                "operationId": "redirect-to-original-link",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "short uuid",
+                        "name": "link_uuid",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "300": {
+                        "description": ""
+                    },
+                    "404": {
                         "description": ""
                     }
                 }
@@ -265,7 +270,7 @@
                 "trimmed": {
                     "type": "string"
                 },
-                "userId": {
+                "userID": {
                     "type": "string"
                 }
             }
@@ -277,12 +282,6 @@
             ],
             "properties": {
                 "link_url": {
-                    "type": "string"
-                },
-                "trimmedUrl": {
-                    "type": "string"
-                },
-                "userId": {
                     "type": "string"
                 }
             }
