# trim-server/trimmed-links/dto.go
@@ -2,6 +2,6 @@ package trimmedlinks
 
 type CreateTrimmedLinkDto struct {
 	LinkUrl    string `json:"link_url" binding:"required"`
-	TrimmedUrl string
-	UserId     string
+	TrimmedUrl string `swaggerignore:"true"`
+	UserId     string `swaggerignore:"true"`
 }
